# aoc21

./: Makefile  pyproject.toml
aoc21/: __init__.py  aoc.py  bingo.py  common.py  day01.py  day02.py  ship.py
tests/: test_aoc21.py
