[tool.poetry]
name = "aoc21"
version = "0.1.0"
description = ""
authors = ["Ryan Hill <rthill91@gmail.com>"]

[tool.poetry.scripts]
aoc = "aoc21.aoc:run"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
